# dx-rust

./: .gitignore  Cargo.toml  README.md  main  main.c  styles.css
.idx/: dev.nix
c/: main.c
inspirations/: README.md  build.md  main.md  main.txt  wasm.rs
inspirations/header/: mod.rs
src/: main.rs  page.tsx  wasm.rs
src/group/: mod.rs
src/id/: mod.rs
src/io/: mod.rs
test/: page.tsx
