[package]
name = "dx"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
glob = "0.3.2"
notify = "8.2.0"
swc = "33.0.0"
swc_common = "14.0.2"
swc_ecma_ast = "14.0.0"
swc_ecma_parser = "22.0.3"
swc_ecma_visit = "14.0.0"
# libc = "0.2.174"
# memmap2 = "0.9.7"
# rayon = "1.10.0"

[build-dependencies]
# cc = "1.0"
