[package]
name = "dx"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
glob = "0.3.2"
memmap2 = "0.9.7"
notify = "8.2.0"
rayon = "1.10.0"
swc = "33.0.0"
swc_common = "14.0.2"
swc_ecma_ast = "14.0.0"
swc_ecma_parser = "22.0.3"
swc_ecma_visit = "14.0.0"
# serde = "1.0.219"
# serde_json = "1.0.142"
# tokio = "1.47.1"
# xxhash-rust = "0.8.15"
# ahash = "0.8.12"
# bincode = "2.0.1"
# blake3 = "1.8.2"
# colored = "3.0.0"
# crossbeam = "0.8.4"
# glob = "0.3.2"
# lru = "0.16.0"
# memmap2 = "0.9.7"
# polling = "3.10.0"
# rayon = "1.10.0"
# redis = "0.32.4"
# rkyv = "0.8.11"
# swc = "33.0.0"
# swc_common = "14.0.2"
# swc_ecma_ast = "14.0.0"
# swc_ecma_minifier = "28.0.2"
# swc_ecma_parser = "22.0.3"
# swc_ecma_visit = "14.0.0"
# tokio = "1.47.1"
# zstd = "0.13.3"
# # glob = "0.3.2"
# # swc = "33.0.0"
# # swc_common = "14.0.2"
# # swc_ecma_ast = "14.0.0"
# # swc_ecma_parser = "22.0.3"
# # swc_ecma_visit = "14.0.0"
# # swc_ecma_minifier = "2.1.3"
# # colored = "2.1.0"
# # rayon = "1.10.0"
# # tokio = { version = "1.40.0", features = ["full"] }
# # bincode = "1.3.3"
# # rkyv = { version = "0.7.44", features = ["validation"] }
# # zstd = "0.13.2"
# # ahash = "0.8.11"
# # blake3 = "1.5.4"
# # polling = "3.7.3"
# # memmap2 = "0.9.5"

# [dependencies.mimalloc]
# version = "0.1.43"
# features = ["secure"]

# [dependencies.wasm-bindgen]
# version = "0.2.95"
# optional = true

# [features]
# wasm = ["wasm-bindgen"]
# wasm-bindgen = ["dep:wasm-bindgen"]

# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1

# [[bin]]
# name = "dx-styles"
# path = "src/main.rs"

# [[bin]]
# name = "dx-styles-wasm"
# path = "src/wasm.rs"
# required-features = ["wasm"]
